--- a/css/styles.css
+++ b/css/styles.css
@@ -387,7 +387,8 @@ a{
 
 .navItem a:active{
     
-    font-size: 6px;
+    font-size: 5px;
+    width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -423,6 +424,7 @@ a{
 .section pre,h1{
     text-align: left;
     color: white;
+    font-size: 4px;
 }
 
 
