--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,20 @@
 a{
     text-decoration: none;
 }
+#btnUp{
+    width: 25px;
+    height: 25px;
+    font-size: 13px;
+    border-radius: 4px;
+    border: none;
+    outline: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    cursor: pointer;
+    background-color: rgb(73, 136, 138);
+}
 /*Desktop view*/
 @media screen and (min-width:1280px){
 
