--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ a{
     }
     #container{
         width: 100%;
-        background-image: linear-gradient(to right,rgb(113, 190, 201),rgb(196, 196, 196),black);
+        background-image: linear-gradient(to right,white,silver);
         top: 0;
         height: 60px;
         box-sizing: border-box;
@@ -55,25 +55,22 @@ a{
         box-sizing: border-box;
     }
     .navItem{
+        height: 60px;
         display: flex;
         width: 100px;
-        height: 35px;
         text-align: center;
         align-items: center;
         box-sizing: border-box;
     }
     .navItem a:hover{
-        height: 60px;
         display: flex;
-        color: salmon;
-        background-color: white;
+        color: red;
         text-align: center;
         align-items: center;
         justify-content: center;
     }
     .navItem a:active{
-        color: black;
-        font-size: 20px;
+        color:black;
     }
     
     .section{
@@ -84,20 +81,20 @@ a{
         box-sizing: border-box;
     }
     #section1{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
+        background-image: linear-gradient(to left, green,lightblue);
         padding: 120px 0px 0px 20px;
     }
     #section2{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 20px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 20px;
     }
     #section3{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 20px;
+        background-image: linear-gradient(to left, green,lightblue);
+        padding: 120px 0px 0px 20px;
     }
     #section4{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 20px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 20px;
     }
     .section pre,h1{
         text-align: left;
@@ -116,7 +113,7 @@ a{
     }
     #container{
         width: 100%;
-        background-image: linear-gradient(to left,rgb(34, 168, 221),rgb(255, 255, 255),black);
+        background-image: linear-gradient(to right,white,silver);
         top: 0;
         height: 60px;
         box-sizing: border-box;
@@ -142,20 +139,20 @@ a{
     .navItem{
         display: flex;
         width: 100px;
-        height: 35px;
+        height: 60px;
         text-align: center;
         align-items: center;
         box-sizing: border-box;
     }
-
+    .navItem a:hover{
+        color: red;
+    }
     .navItem a:active{
         display: flex;
         align-items: center;
         justify-content: center;
         height: 60px;
-        background-color: white;
-        color: salmon;
-        font-size: 18px;
+        color: red;
     }
     
     .section{
@@ -166,20 +163,20 @@ a{
         box-sizing: border-box;
     }
     #section1{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
+        background-image: linear-gradient(to left, green,lightblue);
         padding: 120px 0px 0px 15px;
     }
     #section2{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 15px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 15px;
     }
     #section3{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 15px;
+        background-image: linear-gradient(to left, green,lightblue);
+        padding: 120px 0px 0px 15px;
     }
     #section4{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 15px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 15px;
     }
     .section pre,h1{
         text-align: left;
@@ -200,7 +197,7 @@ a{
     #container{
         width: 100%;
         height: 60px;
-        background-image: linear-gradient(to left,rgb(34, 168, 221),rgb(255, 255, 255),black);
+        background-image: linear-gradient(to right,white,silver);
         align-items: center;
         display: block;
         position: fixed;
@@ -215,6 +212,7 @@ a{
         box-sizing: border-box;
     }
     #navList{
+        height: 60px;
         font-size: 10px;
         width: 50%;
         display: flex;
@@ -225,21 +223,22 @@ a{
     }
     .navItem{
         display: flex;
-        width: 40px;
-        height: 20px;
+        width: 60px;
+        height: 60px;
         text-align: center;
         align-items: center;
+        justify-content: center;
         box-sizing: border-box;
     }
-
+    .navItem a:hover{
+        color: red;
+    }
     .navItem a:active{
-        font-size: 14px;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 60px;
-        background-color: white;
-        color: salmon;
+        color: red;
         
     }
     
@@ -251,20 +250,20 @@ a{
         z-index: -1;
     }
     #section1{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
+        background-image: linear-gradient(to left, green,lightblue);
         padding: 120px 0px 0px 10px;
     }
     #section2{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 10px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 10px;
     }
     #section3{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 10px;
+        background-image: linear-gradient(to left, green,lightblue);
+        padding: 120px 0px 0px 10px;
     }
     #section4{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 60px 0px 0px 10px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 120px 0px 0px 10px;
     }
     .section pre,h1{
         text-align: left;
@@ -287,7 +286,7 @@ a{
     #container{
         width: 100%;
         height: 30px;
-        background-image: linear-gradient(to left,rgb(34, 168, 221),rgb(255, 255, 255),black);
+        background-image: linear-gradient(to right,white,silver);
         align-items: center;
         display: flex;
         position: fixed;
@@ -301,6 +300,7 @@ a{
         box-sizing: border-box;
     }
     #navList{
+        height: 30px;
         font-size: 8px;
         width: 50%;
         display: flex;
@@ -311,47 +311,46 @@ a{
     }
     .navItem{
         display: flex;
-        width: 30px;
-        height: 13.5px;
+        width: 50px;
+        height: 30px;
         text-align: center;
         align-items: center;
         box-sizing: border-box;
     }
-
+    .navItem a:hover{
+        color: red;
+    }
     .navItem a:active{
-        
-        font-size: 6px;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 30px;
-        background-color: white;
-        color: salmon;
+        color: red;
         
     }
     
     .section{
         width: 100%;
         min-height: 100vh;
-        font-size: 8px;
+        font-size: 9px;
         box-sizing: border-box;
         z-index: -1;
     }
     #section1{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
+        background-image: linear-gradient(to left, green,lightblue);
         padding: 45px 0px 0px 5px;
     }
     #section2{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 20px 0px 0px 5px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 45px 0px 0px 5px;
     }
     #section3{
-        background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
-        padding: 20px 0px 0px 5px;
+        background-image: linear-gradient(to left, green,lightblue);
+        padding: 45px 0px 0px 5px;
     }
     #section4{
-        background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-        padding: 20px 0px 0px 5px;
+        background-image: linear-gradient(to right, green,lightblue);
+        padding: 45px 0px 0px 5px;
     }
     .section pre,h1{
         text-align: left;
@@ -372,8 +371,8 @@ a{
 }
 #container{
     width: 100%;
-    height: 20px;
-    background-image: linear-gradient(to left,rgb(34, 168, 221),rgb(255, 255, 255),black);
+    height: 30px;
+    background-image: linear-gradient(to right,white,silver);
     align-items: center;
     display: flex;
     position: fixed;
@@ -382,13 +381,14 @@ a{
     transition: top 0.3s;
 }
 #navBar{
-    height: 20px;
+    height: 30px;
     display: flex;
     justify-content: start;
     box-sizing: border-box;
 }
 #navList{
-    font-size: 7px;
+    height: 30px;
+    font-size: 6px;
     width: 50%;
     display: flex;
     align-items: center;
@@ -398,23 +398,22 @@ a{
 }
 .navItem{
     display: flex;
-    width: 18px;
-    height: 13px;
+    width: 35px;
+    height: 30px;
     text-align: center;
     align-items: center;
     box-sizing: border-box;
 }
 
+.navItem a:hover{
+    color: red;
+}
 .navItem a:active{
-    
-    font-size: 5px;
-    width: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 20px;
-    background-color: white;
-    color: salmon;
+    height: 30px;
+    color: red;
     
 }
 
@@ -426,26 +425,25 @@ a{
     z-index: -1;
 }
 #section1{
-    background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
+    background-image: linear-gradient(to left, green,lightblue);
     padding: 35px 0px 0px 4px;
 }
 #section2{
-    background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-    padding: 20px 0px 0px 4px;
+    background-image: linear-gradient(to right, green,lightblue);
+    padding: 35px 0px 0px 4px;
 }
 #section3{
-    background-image: linear-gradient(to left, rgb(34, 168, 221),grey,black);
-    padding: 20px 0px 0px 4px;
+    background-image: linear-gradient(to left, green,lightblue);
+    padding: 35px 0px 0px 4px;
 }
 #section4{
-    background-image: linear-gradient(to right, rgb(34, 168, 221),grey,black);
-    padding: 20px 0px 0px 4px;
+    background-image: linear-gradient(to right, green,lightblue);
+    padding: 35px 0px 0px 4px;
 }
 .section pre,h1{
     text-align: left;
     color: white;
-    font-size: 4px;
+    font-size: 6px;
 }
-
 
 }
